--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,15 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-
   color: #222;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 1em;
 }
 
 article {
@@ -24,26 +27,53 @@ article {
 
 article h1 {
   font-weight: normal;
+  margin-top: 1em;
+  margin-bottom: .125em;
 }
 
 article header {
   border-bottom: 1px solid #999;
+  margin-bottom: 1.5em;
 }
 
 article header p {
   font-style: italic;
+  font-size: .9rem;
+  margin-top: 0;
+  margin-bottom: 1em;
 }
 
 article > p:last-child {
   border-bottom: 1px solid #999;
+  padding-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 
 blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
+  margin: 0;
+  margin-right: 0;
 }
 
 .quote {
   color: #999;
+  margin-left: -.5em;
+}
+
+ol {
+  padding: .5em 0 .5em 1em;
+  margin: 0;
+}
+
+@media only screen and (min-width: 38em) {
+
+  blockquote {
+    margin: 0 0 0 3em;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  
 }
