--- a/css/main.css
+++ b/css/main.css
@@ -23,30 +23,33 @@ body {
 
 article {
   max-width: 43em;
+  margin: auto;
+  line-height: 1.3;
 }
 
 article h1 {
   font-weight: normal;
   margin-top: 1em;
-  margin-bottom: .125em;
+  margin-bottom: .5em;
 }
 
 article header {
   border-bottom: 1px solid #999;
-  margin-bottom: 1.5em;
+  margin-bottom: 1.3em;
 }
 
 article header p {
   font-style: italic;
-  font-size: .9rem;
+  font-size: 1rem;
   margin-top: 0;
-  margin-bottom: 1em;
+  margin-bottom: 1.3em;
 }
 
 article > p:last-child {
   border-bottom: 1px solid #999;
   padding-bottom: 1em;
-  margin-bottom: 1.5em;
+  margin-top: 0;
+  margin-bottom: 1.3em;
 }
 
 blockquote {
@@ -70,10 +73,31 @@ ol {
 @media only screen and (min-width: 38em) {
 
   blockquote {
-    margin: 0 0 0 3em;
+    margin: auto;
+  }
+
+  article {
+    font-size: 110%;
+    line-height: 1.4;
   }
 }
 
 @media only screen and (min-width: 60em) {
-  
+
+  article {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  ol {
+    margin-left: -1em;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  article {
+    font-size: 130%;
+    line-height: 1.5;
 }
